@@ -53,12 +53,8 @@ struct EdgeBarrierController::Impl : public sigc::trackable
   bool EventIsInsideYBreakZone(BarrierEvent::Ptr const& event);
   bool EventIsInsideXBreakZone(BarrierEvent::Ptr const& event);
 
-  void AddEventFilter();
-
   PointerBarrierWrapper::Ptr FindBarrierEventOwner(XIBarrierEvent* barrier_event);
-
-  static bool HandleEventCB(XEvent event, void* data);
-  bool HandleEvent(XEvent& event);
+  void HandleEvent(XEvent const&);
 
   std::vector<PointerBarrierWrapper::Ptr> vertical_barriers_;
   std::vector<PointerBarrierWrapper::Ptr> horizontal_barriers_;
@@ -68,7 +64,6 @@ struct EdgeBarrierController::Impl : public sigc::trackable
 
   Decaymulator decaymulator_;
   glib::Source::UniquePtr release_timeout_;
-  int xi2_opcode_;
   float edge_overcome_pressure_;
   EdgeBarrierController* parent_;
 };
